Fixed header text alignment

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,4 +12,5 @@ div#header {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
+    text-align: center;
 }
